@@ -1254,20 +1254,41 @@ INSERT INTO m_global_metadata VALUES ('databaseSchemaVersion', '4.6');
 -- running in dedicated mode, so only consider the above as a hint
 --
 
-CREATE TABLE qrtz_job_details
-  (
-    SCHED_NAME VARCHAR2(120) NOT NULL,
-    JOB_NAME  VARCHAR2(200) NOT NULL,
-    JOB_GROUP VARCHAR2(200) NOT NULL,
-    DESCRIPTION VARCHAR2(250) NULL,
-    JOB_CLASS_NAME   VARCHAR2(250) NOT NULL,
-    IS_DURABLE VARCHAR2(1) NOT NULL,
-    IS_NONCONCURRENT VARCHAR2(1) NOT NULL,
-    IS_UPDATE_DATA VARCHAR2(1) NOT NULL,
-    REQUESTS_RECOVERY VARCHAR2(1) NOT NULL,
-    JOB_DATA BLOB NULL,
-    CONSTRAINT QRTZ_JOB_DETAILS_PK PRIMARY KEY (SCHED_NAME,JOB_NAME,JOB_GROUP)
-);
+BEGIN
+  IF DBMS_DB_VERSION.VERSION >= 23 THEN
+    EXECUTE IMMEDIATE '
+      CREATE TABLE qrtz_job_details (
+        SCHED_NAME          VARCHAR2(120) NOT NULL,
+        JOB_NAME            VARCHAR2(200) NOT NULL,
+        JOB_GROUP           VARCHAR2(200) NOT NULL,
+        DESCRIPTION         VARCHAR2(250),
+        JOB_CLASS_NAME      VARCHAR2(250) NOT NULL,
+        IS_DURABLE          BOOLEAN NOT NULL,
+        IS_NONCONCURRENT    BOOLEAN NOT NULL,
+        IS_UPDATE_DATA      BOOLEAN NOT NULL,
+        REQUESTS_RECOVERY   BOOLEAN NOT NULL,
+        JOB_DATA            BLOB,
+        CONSTRAINT QRTZ_JOB_DETAILS_PK PRIMARY KEY (SCHED_NAME, JOB_NAME, JOB_GROUP)
+      )';
+  ELSE
+    EXECUTE IMMEDIATE '
+      CREATE TABLE qrtz_job_details (
+        SCHED_NAME          VARCHAR2(120) NOT NULL,
+        JOB_NAME            VARCHAR2(200) NOT NULL,
+        JOB_GROUP           VARCHAR2(200) NOT NULL,
+        DESCRIPTION         VARCHAR2(250),
+        JOB_CLASS_NAME      VARCHAR2(250) NOT NULL,
+        IS_DURABLE          VARCHAR2(1) NOT NULL,
+        IS_NONCONCURRENT    VARCHAR2(1) NOT NULL,
+        IS_UPDATE_DATA      VARCHAR2(1) NOT NULL,
+        REQUESTS_RECOVERY   VARCHAR2(1) NOT NULL,
+        JOB_DATA            BLOB,
+        CONSTRAINT QRTZ_JOB_DETAILS_PK PRIMARY KEY (SCHED_NAME, JOB_NAME, JOB_GROUP)
+      )';
+  END IF;
+END;
+/
+
 CREATE TABLE qrtz_triggers
   (
     SCHED_NAME VARCHAR2(120) NOT NULL,
@@ -1314,26 +1335,54 @@ CREATE TABLE qrtz_cron_triggers
     CONSTRAINT QRTZ_CRON_TRIG_TO_TRIG_FK FOREIGN KEY (SCHED_NAME,TRIGGER_NAME,TRIGGER_GROUP)
       REFERENCES QRTZ_TRIGGERS(SCHED_NAME,TRIGGER_NAME,TRIGGER_GROUP)
 );
-CREATE TABLE qrtz_simprop_triggers
-  (
-    SCHED_NAME VARCHAR2(120) NOT NULL,
-    TRIGGER_NAME VARCHAR2(200) NOT NULL,
-    TRIGGER_GROUP VARCHAR2(200) NOT NULL,
-    STR_PROP_1 VARCHAR2(512) NULL,
-    STR_PROP_2 VARCHAR2(512) NULL,
-    STR_PROP_3 VARCHAR2(512) NULL,
-    INT_PROP_1 NUMBER(10) NULL,
-    INT_PROP_2 NUMBER(10) NULL,
-    LONG_PROP_1 NUMBER(13) NULL,
-    LONG_PROP_2 NUMBER(13) NULL,
-    DEC_PROP_1 NUMERIC(13,4) NULL,
-    DEC_PROP_2 NUMERIC(13,4) NULL,
-    BOOL_PROP_1 VARCHAR2(1) NULL,
-    BOOL_PROP_2 VARCHAR2(1) NULL,
-    CONSTRAINT QRTZ_SIMPROP_TRIG_PK PRIMARY KEY (SCHED_NAME,TRIGGER_NAME,TRIGGER_GROUP),
-    CONSTRAINT QRTZ_SIMPROP_TRIG_TO_TRIG_FK FOREIGN KEY (SCHED_NAME,TRIGGER_NAME,TRIGGER_GROUP)
-      REFERENCES QRTZ_TRIGGERS(SCHED_NAME,TRIGGER_NAME,TRIGGER_GROUP)
-);
+
+BEGIN
+  IF DBMS_DB_VERSION.VERSION >= 23 THEN
+    EXECUTE IMMEDIATE '
+      CREATE TABLE qrtz_simprop_triggers (
+        SCHED_NAME     VARCHAR2(120) NOT NULL,
+        TRIGGER_NAME   VARCHAR2(200) NOT NULL,
+        TRIGGER_GROUP  VARCHAR2(200) NOT NULL,
+        STR_PROP_1     VARCHAR2(512),
+        STR_PROP_2     VARCHAR2(512),
+        STR_PROP_3     VARCHAR2(512),
+        INT_PROP_1     NUMBER(10),
+        INT_PROP_2     NUMBER(10),
+        LONG_PROP_1    NUMBER(13),
+        LONG_PROP_2    NUMBER(13),
+        DEC_PROP_1     NUMERIC(13,4),
+        DEC_PROP_2     NUMERIC(13,4),
+        BOOL_PROP_1    BOOLEAN,
+        BOOL_PROP_2    BOOLEAN,
+        CONSTRAINT QRTZ_SIMPROP_TRIG_PK PRIMARY KEY (SCHED_NAME, TRIGGER_NAME, TRIGGER_GROUP),
+        CONSTRAINT QRTZ_SIMPROP_TRIG_FK FOREIGN KEY (SCHED_NAME, TRIGGER_NAME, TRIGGER_GROUP)
+          REFERENCES QRTZ_TRIGGERS(SCHED_NAME, TRIGGER_NAME, TRIGGER_GROUP)
+      )';
+  ELSE
+    EXECUTE IMMEDIATE '
+      CREATE TABLE qrtz_simprop_triggers (
+        SCHED_NAME     VARCHAR2(120) NOT NULL,
+        TRIGGER_NAME   VARCHAR2(200) NOT NULL,
+        TRIGGER_GROUP  VARCHAR2(200) NOT NULL,
+        STR_PROP_1     VARCHAR2(512),
+        STR_PROP_2     VARCHAR2(512),
+        STR_PROP_3     VARCHAR2(512),
+        INT_PROP_1     NUMBER(10),
+        INT_PROP_2     NUMBER(10),
+        LONG_PROP_1    NUMBER(13),
+        LONG_PROP_2    NUMBER(13),
+        DEC_PROP_1     NUMERIC(13,4),
+        DEC_PROP_2     NUMERIC(13,4),
+        BOOL_PROP_1    VARCHAR2(1),
+        BOOL_PROP_2    VARCHAR2(1),
+        CONSTRAINT QRTZ_SIMPROP_TRIG_PK PRIMARY KEY (SCHED_NAME, TRIGGER_NAME, TRIGGER_GROUP),
+        CONSTRAINT QRTZ_SIMPROP_TRIG_FK FOREIGN KEY (SCHED_NAME, TRIGGER_NAME, TRIGGER_GROUP)
+          REFERENCES QRTZ_TRIGGERS(SCHED_NAME, TRIGGER_NAME, TRIGGER_GROUP)
+      )';
+  END IF;
+END;
+/
+
 CREATE TABLE qrtz_blob_triggers
   (
     SCHED_NAME VARCHAR2(120) NOT NULL,
@@ -1357,24 +1406,50 @@ CREATE TABLE qrtz_paused_trigger_grps
     TRIGGER_GROUP  VARCHAR2(200) NOT NULL,
     CONSTRAINT QRTZ_PAUSED_TRIG_GRPS_PK PRIMARY KEY (SCHED_NAME,TRIGGER_GROUP)
 );
-CREATE TABLE qrtz_fired_triggers
-  (
-    SCHED_NAME VARCHAR2(120) NOT NULL,
-    ENTRY_ID VARCHAR2(95) NOT NULL,
-    TRIGGER_NAME VARCHAR2(200) NOT NULL,
-    TRIGGER_GROUP VARCHAR2(200) NOT NULL,
-    INSTANCE_NAME VARCHAR2(200) NOT NULL,
-    FIRED_TIME NUMBER(13) NOT NULL,
-    SCHED_TIME NUMBER(13) NOT NULL,
-    PRIORITY NUMBER(13) NOT NULL,
-    EXECUTION_GROUP VARCHAR2(200) NULL,
-    STATE VARCHAR2(16) NOT NULL,
-    JOB_NAME VARCHAR2(200) NULL,
-    JOB_GROUP VARCHAR2(200) NULL,
-    IS_NONCONCURRENT VARCHAR2(1) NULL,
-    REQUESTS_RECOVERY VARCHAR2(1) NULL,
-    CONSTRAINT QRTZ_FIRED_TRIGGER_PK PRIMARY KEY (SCHED_NAME,ENTRY_ID)
-);
+
+BEGIN
+  IF DBMS_DB_VERSION.VERSION >= 23 THEN
+    EXECUTE IMMEDIATE '
+      CREATE TABLE qrtz_fired_triggers (
+        SCHED_NAME         VARCHAR2(120) NOT NULL,
+        ENTRY_ID           VARCHAR2(95) NOT NULL,
+        TRIGGER_NAME       VARCHAR2(200) NOT NULL,
+        TRIGGER_GROUP      VARCHAR2(200) NOT NULL,
+        INSTANCE_NAME      VARCHAR2(200) NOT NULL,
+        FIRED_TIME         NUMBER(13) NOT NULL,
+        SCHED_TIME         NUMBER(13) NOT NULL,
+        PRIORITY           NUMBER(13) NOT NULL,
+        EXECUTION_GROUP    VARCHAR2(200),
+        STATE              VARCHAR2(16) NOT NULL,
+        JOB_NAME           VARCHAR2(200),
+        JOB_GROUP          VARCHAR2(200),
+        IS_NONCONCURRENT   BOOLEAN,
+        REQUESTS_RECOVERY  BOOLEAN,
+        CONSTRAINT QRTZ_FIRED_TRIGGER_PK PRIMARY KEY (SCHED_NAME, ENTRY_ID)
+      )';
+  ELSE
+    EXECUTE IMMEDIATE '
+      CREATE TABLE qrtz_fired_triggers (
+        SCHED_NAME         VARCHAR2(120) NOT NULL,
+        ENTRY_ID           VARCHAR2(95) NOT NULL,
+        TRIGGER_NAME       VARCHAR2(200) NOT NULL,
+        TRIGGER_GROUP      VARCHAR2(200) NOT NULL,
+        INSTANCE_NAME      VARCHAR2(200) NOT NULL,
+        FIRED_TIME         NUMBER(13) NOT NULL,
+        SCHED_TIME         NUMBER(13) NOT NULL,
+        PRIORITY           NUMBER(13) NOT NULL,
+        EXECUTION_GROUP    VARCHAR2(200),
+        STATE              VARCHAR2(16) NOT NULL,
+        JOB_NAME           VARCHAR2(200),
+        JOB_GROUP          VARCHAR2(200),
+        IS_NONCONCURRENT   VARCHAR2(1),
+        REQUESTS_RECOVERY  VARCHAR2(1),
+        CONSTRAINT QRTZ_FIRED_TRIGGER_PK PRIMARY KEY (SCHED_NAME, ENTRY_ID)
+      )';
+  END IF;
+END;
+/
+
 CREATE TABLE qrtz_scheduler_state
   (
     SCHED_NAME VARCHAR2(120) NOT NULL,
